# openocr-client

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
python/: README.md  STREAMING.md  WEBHOOKS.md  pyproject.toml
python/openocr/: __init__.py  client.py  exceptions.py  models.py  streaming.py  webhooks.py
python/tests/: test_client.py  test_streaming.py  test_webhooks.py
typescript/: README.md  STREAMING.md  WEBHOOKS.md  package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  index.ts  streaming.ts  types.ts  webhooks.ts
typescript/tests/: client.test.ts  streaming.test.ts  webhooks.test.ts
