[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openocr"
version = "0.2.0"
description = "Official Python SDK for the OpenOCR API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "OpenOCR", email = "sdk@open-ocr.com" }]
keywords = ["ocr", "pdf", "document", "extraction"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx", "ruff", "black", "mypy"]

[project.urls]
Homepage = "https://open-ocr.com"
Documentation = "https://open-ocr.com/docs"
Repository = "https://github.com/mothercoremasterchief-prog/openocr-client"
Issues = "https://github.com/mothercoremasterchief-prog/openocr-client/issues"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
